<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/include_guideline_left" />
    <include layout="@layout/include_guideline_right" />
    <include layout="@layout/include_guideline_top" />
    <include layout="@layout/include_guideline_bottom" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        tools:ignore="MissingConstraints">
        <!-- 메뉴 설정하는 방법 : https://stackoverflow.com/questions/35648913/how-to-set-menu-to-toolbar-in-android -->
        <include layout="@layout/appbar_get_clear_button"/>
    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/mainGuidelineHorizontalBottom"
        app:layout_constraintLeft_toRightOf="@+id/mainGuidelineVerticalLeft"
        app:layout_constraintRight_toLeftOf="@+id/mainGuidelineVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/mainGuidelineHorizontalTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/member_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/member_number"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/email_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/email_link"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/phone_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/activity_login_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/member_find_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/member_number_search"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pw_find_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:maxLines="1"
                android:text="@string/pw_search"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/join_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/join_membership"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>